@@ -21,4 +21,4 @@ RUN cd /spigot && echo "eula=true" > eula.txt
 # COPY server-icon.png /spigot/
 COPY server.properties /spigot/
 COPY build/libs/bitquest-all.jar /spigot/plugins/
-CMD java -jar spigot.jar
+CMD -Xmx8G -Xms8G -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:MaxGCPauseMillis=45 -XX:TargetSurvivorRatio=90 -XX:G1NewSizePercent=50 -XX:G1MaxNewSizePercent=80 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=50 -XX:+AggressiveOpts -jar spigot.jar
